--- a/paper-refs.bib
+++ b/paper-refs.bib
@@ -183,7 +183,7 @@
 @article{sczyrba2017critical,
   title={Critical assessment of metagenome interpretation—a benchmark of metagenomics software},
   author={Sczyrba, Alexander and Hofmann, Peter and Belmann, Peter and Koslicki, David and Janssen, Stefan and Dr{\"o}ge, Johannes and Gregor, Ivan and Majda, Stephan and Fiedler, Jessika and Dahms, Eik and others},
-  journal={Nature methods},
+  journal={Nature Methods},
   volume={14},
   number={11},
   pages={1063},
@@ -222,7 +222,7 @@
                Metagenomes}",
   author    = "Mason, Christopher E and Afshinnekoo, Ebrahim and Tighe, Scott
                and Wu, Shixiu and Levy, Shawn",
-  journal   = "Journal of biomolecular techniques",
+  journal   = "Journal of Biomolecular Techniques",
   publisher = "ncbi.nlm.nih.gov",
   volume    =  28,
   number    =  1,
@@ -270,7 +270,7 @@ doi = {10.1093/bioinformatics/bty841},
                Terrance P and Tee, Louise and Paten, Benedict and Phillippy,
                Adam M and Simpson, Jared T and Loman, Nicholas J and Loose,
                Matthew",
-  journal   = "Nature biotechnology",
+  journal   = "Nature Biotechnology",
   publisher = "The Author(s)",
   volume    =  36,
   pages     = "338",
@@ -288,7 +288,7 @@ doi = {10.1093/bioinformatics/bty841},
   title    = "{MEGAN analysis of metagenomic data}",
   author   = "Huson, Daniel H and Auch, Alexander F and Qi, Ji and Schuster,
               Stephan C",
-  journal  = "Genome research",
+  journal  = "Genome Research",
   volume   =  17,
   number   =  3,
   pages    = "377--386",
@@ -330,7 +330,7 @@ doi = {10.1093/bioinformatics/bty841},
   author   = "Ackelsberg, Joel and Rakeman, Jennifer and Hughes, Scott and
               Petersen, Jeannine and Mead, Paul and Schriefer, Martin and
               Kingry, Luke and Hoffmaster, Alex and Gee, Jay E",
-  journal  = "Cell systems",
+  journal  = "Cell Systems",
   volume   =  1,
   number   =  1,
   pages    = "4--5",
@@ -350,7 +350,7 @@ doi = {10.1093/bioinformatics/bty841},
                Yuki and Ise, Kotaro and Suzuki, Yohey and Dudek, Natasha and
                Relman, David A and Finstad, Kari M and Amundson, Ronald and
                Thomas, Brian C and Banfield, Jillian F",
-  journal   = "Nature microbiology",
+  journal   = "Nature Microbiology",
   publisher = "nature.com",
   volume    =  1,
   pages     = "16048",
@@ -370,7 +370,7 @@ doi = {10.1093/bioinformatics/bty841},
               Swann, Jeremy and Atkins, Bridget L and Brent, Andrew J and
               McNally, Martin A and Oakley, Sarah and Taylor, Adrian and Peto,
               Tim E A and Crook, Derrick W and Eyre, David W",
-  journal  = "BMC genomics",
+  journal  = "BMC Genomics",
   volume   =  19,
   number   =  1,
   pages    = "714",
@@ -389,7 +389,7 @@ doi = {10.1093/bioinformatics/bty841},
   title    = "{Detecting DNA cytosine methylation using nanopore sequencing}",
   author   = "Simpson, Jared T and Workman, Rachael E and Zuzarte, P C and
               David, Matei and Dursi, L J and Timp, Winston",
-  journal  = "Nature methods",
+  journal  = "Nature Methods",
   volume   =  14,
   number   =  4,
   pages    = "407--410",
@@ -415,7 +415,7 @@ doi = {10.1093/bioinformatics/bty841},
 @ARTICLE{Wommack2008-qf,
   title    = "{Metagenomics: read length matters}",
   author   = "Wommack, K Eric and Bhavsar, Jaysheel and Ravel, Jacques",
-  journal  = "Applied and environmental microbiology",
+  journal  = "Applied and Environmental Microbiology",
   volume   =  74,
   number   =  5,
   pages    = "1453--1463",
@@ -439,8 +439,7 @@ doi = {10.1093/bioinformatics/bty841},
                Prjibelski, Andrey D and Pyshkin, Alexey V and Sirotkin,
                Alexander V and Vyahhi, Nikolay and Tesler, Glenn and Alekseyev,
                Max A and Pevzner, Pavel A",
-  journal   = "Journal of computational biology: a journal of computational
-               molecular cell biology",
+  journal   = "Journal of Computational Biology",
   publisher = "online.liebertpub.com",
   volume    =  19,
   number    =  5,
@@ -459,7 +458,7 @@ doi = {10.1093/bioinformatics/bty841},
   title     = "{Metagenomics: application of genomics to uncultured
                microorganisms}",
   author    = "Handelsman, Jo",
-  journal   = "Microbiology and molecular biology reviews: MMBR",
+  journal   = "Microbiology and Molecular Biology Reviews",
   publisher = "Am Soc Microbiol",
   volume    =  68,
   number    =  4,
@@ -489,7 +488,7 @@ doi = {10.1093/bioinformatics/bty841},
   title    = "{From squiggle to basepair: computational approaches for improving
               nanopore sequencing read accuracy}",
   author   = "Rang, Franka J and Kloosterman, Wigard P and de Ridder, Jeroen",
-  journal  = "Genome biology",
+  journal  = "Genome Biology",
   volume   =  19,
   number   =  1,
   pages    = "90",
@@ -508,7 +507,7 @@ doi = {10.1093/bioinformatics/bty841},
   author    = "Huson, Daniel H and Albrecht, Benjamin and Bağcı, Caner and
                Bessarab, Irina and Górska, Anna and Jolic, Dino and Williams,
                Rohan B H",
-  journal   = "Biology direct",
+  journal   = "Biology Direct",
   publisher = "biologydirect.biomedcentral.com",
   volume    =  13,
   number    =  1,
@@ -528,7 +527,7 @@ doi = {10.1093/bioinformatics/bty841},
   title    = "{Shotgun metagenomics, from sampling to analysis}",
   author   = "Quince, Christopher and Walker, Alan W and Simpson, Jared T and
               Loman, Nicholas J and Segata, Nicola",
-  journal  = "Nature biotechnology",
+  journal  = "Nature Biotechnology",
   volume   =  35,
   number   =  9,
   pages    = "833--844",
@@ -539,3 +538,40 @@ doi = {10.1093/bioinformatics/bty841},
   pmid     = "28898207",
   doi      = "10.1038/nbt.3935"
 }
+
+
+@Article{Wood2014,                                                
+author="Wood, Derrick E.                                          
+and Salzberg, Steven L.",                                         
+title="Kraken: ultrafast metagenomic sequence classification using exact alignments",                                                
+journal="Genome Biology",                                         
+year="2014",                                                      
+month="Mar",                                                      
+day="03",                                                         
+volume="15",                                                      
+number="3",                                                       
+pages="R46",                                                      
+abstract="Kraken is an ultrafast and highly accurate program for assigning taxonomic labels to metagenomic DNA sequences. Previous programs designed for this task have been relatively slow and computationally expensive, forcing researchers to use faster abundance estimation programs, which only classify small subsets of metagenomic data. Using exact alignment of k-mers, Kraken achieves classification accuracy comparable to the fastest BLAST program. In its fastest mode, Kraken classifies 100 base pair reads at a rate of over 4.1 million reads per minute, 909 times faster than Megablast and 11 times faster than the abundance estimation program MetaPhlAn. Kraken is available at http://ccb.jhu.edu/software/kraken/.",                                                                           
+issn="1474-760X",                                                 
+doi="10.1186/gb-2014-15-3-r46",                                   
+url="https://doi.org/10.1186/gb-2014-15-3-r46"                    
+}  
+
+
+@ARTICLE{Quick2014-sj,
+  title    = "{A reference bacterial genome dataset generated on the MinION™
+              portable single-molecule nanopore sequencer}",
+  author   = "Quick, Joshua and Quinlan, Aaron R and Loman, Nicholas J",
+  journal  = "GigaScience",
+  volume   =  3,
+  pages    = "22",
+  month    =  oct,
+  year     =  2014,
+  keywords = "Genomics; Nanopore sequencing",
+  language = "en",
+  issn     = "2047-217X",
+  pmid     = "25386338",
+  doi      = "10.1186/2047-217X-3-22",
+  pmc      = "PMC4226419"
+}
+
